classname -> className in faq__answer | removed white-space to fix spacing issue on faq__answer

--- a/src/components/faq/style.scss
+++ b/src/components/faq/style.scss
@@ -34,6 +34,6 @@ $whitespace: 1rem;
   &__answer {
     margin: 0;
     padding-left: 2rem;
-    white-space: pre-wrap;
+    // white-space: pre;
   }
 }
